# cpp_project_template

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
cmake/: conan_config.cmake  coverage_config.cmake  cpack_config.cmake
docs/: Doxyfile
src/: CMakeLists.txt  algo.cpp  algo.hh  main.cpp
test/: CMakeLists.txt  test_algo.cpp
